--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "db-migrate-mysql": "^2.1.1",
     "debug": "~2.6.9",
     "ejs": "^3.0.1",
     "express": "~4.16.1",
