--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,10 +16,8 @@
     "express-validator": "^6.4.0",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.2"
+    "mysql": "^2.18.1"
   }
 }
